objects/JBCXM__CSEvent__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CSEvent</relationshipLabel>
        <relationshipName>CS_Event</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>JBCXM__Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CS_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__CompletionDate__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__Description__c</fullName>
        <label>Description</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsChild__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsChild</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__IsRecurrence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRecurrence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JBCXM__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__RecurrenceDayOfMonth__c</fullName>
        <label>RecurrenceDayOfMonth</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__RecurrenceDayOfWeekMask__c</fullName>
        <label>RecurrenceDayOfWeekMask</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__RecurrenceEndDateOnly__c</fullName>
        <label>RecurrenceEndDateOnly</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__RecurrenceEventId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RecurrenceEventId</label>
        <referenceTo>JBCXM__CSEvent__c</referenceTo>
        <relationshipName>CS_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JBCXM__RecurrenceInstance__c</fullName>
        <label>RecurrenceInstance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First</fullName>
                </value>
                <value>
                    <fullName>Second</fullName>
                </value>
                <value>
                    <fullName>Third</fullName>
                </value>
                <value>
                    <fullName>Fourth</fullName>
                </value>
                <value>
                    <fullName>Last</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__RecurrenceInterval__c</fullName>
        <label>RecurrenceInterval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__RecurrenceMonthOfYear__c</fullName>
        <label>RecurrenceMonthOfYear</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__RecurrenceStartDateOnly__c</fullName>
        <label>RecurrenceStartDateOnly</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>JBCXM__RecurrenceType__c</fullName>
        <label>RecurrenceType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RecursDaily</fullName>
                </value>
                <value>
                    <fullName>RecursEveryWeekDay</fullName>
                </value>
                <value>
                    <fullName>RecursMonthly</fullName>
                </value>
                <value>
                    <fullName>RecursMonthlyNth</fullName>
                </value>
                <value>
                    <fullName>RecursWeekly</fullName>
                </value>
                <value>
                    <fullName>RecursYearly</fullName>
                </value>
                <value>
                    <fullName>RecursYearlyNth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JBCXM__TasksCount__c</fullName>
        <label>Tasks Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JBCXM__Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Type</label>
        <referenceTo>JBCXM__PickList__c</referenceTo>
        <relationshipName>CS_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CSEvent</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSEvent</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>